k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service-mon
spec:
  selector:
    app.kubernetes.io/name: server-mon
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
