k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-mon
spec:
  selector:
    app.kubernetes.io/name: web-mon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
