k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  
  rules:
  - host: 
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service-mon
            port:
              number: 8082

      - path: /
        pathType: Prefix
        backend:
          service:
          name: web-service-mon
          port:
            number: 80
